--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=AdaniDB
-spring.datasource.url=jdbc:postgresql://aws-0-ap-south-1.pooler.supabase.com:6543/postgres?user=postgres.kndbkzzjepmpnlwtvwwl&password=Pmscrm007#
-spring.datasource.username=postgres.kndbkzzjepmpnlwtvwwl
-spring.datasource.password=Pmscrm007#
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
